--- a/idempotent-svc/pom.xml
+++ b/idempotent-svc/pom.xml
@@ -9,12 +9,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>api</module>
-        <module>core</module>
+        <module>idem-svc-api</module>
+        <module>idem-svc-core</module>
         <module>http</module>
-        <module>kafka</module>
         <module>activemq</module>
-        <module>rabbitmq</module>
         <module>examples</module>
     </modules>
 
@@ -81,7 +79,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
