--- a/idm-sdk/idm-core/pom.xml
+++ b/idm-sdk/idm-core/pom.xml
@@ -36,5 +36,9 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
